--- a/about.html
+++ b/about.html
@@ -39,23 +39,25 @@
     </div>  
 
     <div class="container">
+        
         <footer>
 
             <nav>
 
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
 
-                <a href="#">About</a>
+                <a href="about.html">About</a>
 
-                <a href="#">Products</a>
+                <a href="products.html">Products</a>
 
-                <a href="#">Blog</a>
+                <a href="blog.html">Blog</a>
 
-                <a href="#">Contact</a>
+                <a href="contact.html">Contact</a>
 
             </nav>
 
         </footer>
+
     </div>
     
 </body>
